2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Added po files to MonoDevelop projects.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* AboutDialog.cs: Added Juan Miguel Carrero <streinleght@gmail.com> to
	  translator credits.

2008-08-28  Mirco Bauer <meebey@meebey.net> 

	* ColorTools.cs: Set eol-style to native and converted files using dos2unix
	  where needed.

2008-08-28  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs, MainWindow.cs, ChatView.cs: Implementated tray icon support
	  (requires GTK# >= 2.10). (closes trac bug #55)

2008-08-27  Mirco Bauer <meebey@meebey.net>

	* AboutDialog.cs: Replaced (C) with © (copyright character).
	
	  Added link to smuxi's website. (thanks to George Retsinas for noticing
	  this)

2008-08-27  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Preferences/ServerListView.cs, Preferences/ServerView.cs,
	  Preferences/PreferencesDialog.cs, AboutDialog.cs, QuickConnectDialog.cs:
	  Set TransientFor property correctly for all dialogs. (thanks to George
	  Retsinas for reporting this)

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am, smuxi-frontend-gnome.pc.in: Removed unneeded pkg-config
	  files.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs, EngineManagerDialog.cs, Notebook.cs: Fixed switching between
	  local engine and remote engine back and forth. (closes trac bug #106)

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* GnomeUI.cs: Disabled highlight reset hack in SyncChat() as that confuses
	  local engine users (as it causes a bug for the first message) and
	  doesn't really help remote engine users anyway (as they miss highlights
	  they received since the last connect).

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Entry.cs: Moved ctrl+page up/down handling to menu.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs: Implemented store and restore window size /
	  position. (closes trac ticket #91)
